<resources>
    <string name="app_name">Fin Assignment</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="price">Price 100</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_bu_age">Sort bu Age</string>
    <string name="sort_bu_city">Sort bu City</string>
    <string name="name">Name :</string>
    <string name="age">Age :</string>
    <string name="city">City :</string>
</resources>