<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAppLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/fin_logo"
                app:layout_constraintEnd_toStartOf="@id/gl_v2"
                app:layout_constraintStart_toEndOf="@id/gl_v1"
                app:layout_constraintTop_toBottomOf="@id/gl_h1" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="\n Login"
                android:textColor="@color/text_label_color"
                android:textFontWeight="700"

                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toStartOf="@id/gl_v2"
                app:layout_constraintStart_toEndOf="@id/gl_v1"
                app:layout_constraintTop_toBottomOf="@id/ivAppLogo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tFEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:boxStrokeColor="@color/grey"
                app:boxStrokeWidthFocused="@dimen/_1sdp"
                app:cursorColor="@color/grey"
                app:hintTextColor="@color/grey"
                app:layout_constraintEnd_toStartOf="@id/gl_v2"
                app:layout_constraintStart_toEndOf="@id/gl_v1"
                app:layout_constraintTop_toBottomOf="@id/tvLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/grey"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tFPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:boxStrokeColor="@color/grey"
                app:boxStrokeWidthFocused="@dimen/_1sdp"
                app:cursorColor="@color/grey"
                app:hintTextColor="@color/grey"
                app:layout_constraintEnd_toStartOf="@id/gl_v2"
                app:layout_constraintStart_toEndOf="@id/gl_v1"
                app:layout_constraintTop_toBottomOf="@id/tFEmail"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/app_theme_light">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/grey" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPassword"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/forgot_password"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@id/gl_v2"
                app:layout_constraintTop_toBottomOf="@id/tFPassword" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_button_blue_gradient"
                android:padding="12dp"
                android:text="@string/login"
                android:textColor="@color/white"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toTopOf="@id/gl_h2"
                app:layout_constraintEnd_toStartOf="@id/gl_v2"
                app:layout_constraintStart_toEndOf="@id/gl_v1"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
                app:layout_constraintVertical_bias="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_h1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_h2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".98" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_v1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_v2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".95" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>